--- a/wsgiadmin/templates/reg.html
+++ b/wsgiadmin/templates/reg.html
@@ -1,111 +1,48 @@
 {% load i18n %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cs">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-language" content="cs" />
+    <meta name="robots" content="index, follow" />
+    <link type="text/css" media="all" href="{{ STATIC_URL }}style/style.css" rel="stylesheet" />
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+    <title>{% trans "Administration" %} - {{ site }}</title>
 
-	<head>
-		<!-- <meta http-equiv="X-UA-Compatible" content="IE=7.5" > -->
-		<meta http-equiv="X-UA-Compatible" content="IE=100" >
-		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+</head>
+<body class="registrace">
+    <div id="main">
+        <div id="main-inside">
+            <h1><strong>{% trans "Administration" %} /</strong> {{ site }} / {% trans "Registration" %}</h1>
 
-		<title>{% trans "Webová administrace | Přihlášení" %}</title>
+            <div class="container">
+                <div class="container-top">
+                    <div class="container-bottom">
+                        <h2>{% trans "Registration" %}</h2>
+                        <form action="." class="registrace-prihlaseni" id="reg-form" method="post">
+                            {% csrf_token %}
+                            {{ form1.as_p }}
+                            {{ form2.as_p }}
+                            {{ form3.as_p }}
+                            <p>
+                                <input type="submit" name="" class="input-submit-registrovat" value="Registrovat" />
+                            </p>
+                            <p class="help"><a href="{% url login %}">{% trans "Login" %}</a></p>
+                        </form>
 
-		<!--                       CSS                       -->
-
-		<!-- Reset Stylesheet -->
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" />
-
-		<!-- Main Stylesheet -->
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen" />
-
-		<!-- Invalid Stylesheet. This makes stuff look pretty. Remove it if you want the CSS completely valid -->
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/invalid.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/blue.css" type="text/css" media="screen" />
-
-		<!-- Colour Schemes
-
-		Default colour scheme is green. Uncomment prefered stylesheet to use it.
-
-
-
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/red.css" type="text/css" media="screen" />
-
-		-->
-
-		<!-- Internet Explorer Fixes Stylesheet -->
-
-		<!--[if lte IE 7]>
-			<link rel="stylesheet" href="{{ STATIC_URL }}css/ie.css" type="text/css" media="screen" />
-		<![endif]-->
-
-		<!--                       Javascripts                       -->
-
-		<!-- jQuery -->
-		<script type="text/javascript" src="{{ STATIC_URL }}scripts/jquery-1.3.2.min.js"></script>
-
-		<!-- jQuery Configuration -->
-		<script type="text/javascript" src="{{ STATIC_URL }}scripts/simpla.jquery.configuration.js"></script>
-
-		<!-- Facebox jQuery Plugin -->
-		<script type="text/javascript" src="{{ STATIC_URL }}scripts/facebox.js"></script>
-
-		<!-- jQuery WYSIWYG Plugin -->
-		<script type="text/javascript" src="{{ STATIC_URL }}scripts/jquery.wysiwyg.js"></script>
-
-		<!-- Internet Explorer .png-fix -->
-
-		<!--[if IE 6]>
-			<script type="text/javascript" src="{{ STATIC_URL }}scripts/DD_belatedPNG_0.0.7a.js"></script>
-			<script type="text/javascript">
-				DD_belatedPNG.fix('.png_bg, img, li');
-			</script>
-		<![endif]-->
-
-	</head>
-
-	<body id="login">
-
-		<div id="login-wrapper" class="png_bg">
-			<div id="login-top">
-
-				<h1>{% trans "Webová administrace" %}</h1>
-				<!-- Logo (221px width) -->
-				<img id="logo" src="{{ STATIC_URL }}images/logo.png" alt="Administrace" />
-			</div> <!-- End #logn-top -->
-
-			<div id="login-content">
-
-		<form action="{% url wsgiadmin.useradmin.views.reg %}" method="post" id="regform">
-		<h2>{% trans "Kontaktní informace" %}</h2>
-		<table>
-		{{ form1.as_table }}
-		</table>
-		<br />
-		<h2>{% trans "Přihlašovací informace" %}</h2>
-		<table>
-		{{ form2.as_table }}
-		</table>
-		<table style="border: 0;">
-		<tr>
-			<th></th>
-			<td><input type="submit" value="{{ submit }}" class="submit" /><br/><em>{% trans 'Registrací souhlasíte se <a href="{{ CONTRACT_URL }}">smluvními podmínkami</a>.' %}</em></td>
-		</tr>
-		</table>
-		</form>
-
-		<br />
-
-		{% if note %}
-		{% for x in note %}
-			<p><em>{{ x }}</em></p>
-		{% endfor %}
-		{% endif %}
-		<p><em>{% trans "Položky označené <strong>*</strong> jsou povinné." %}</em></p>
-
-			</div> <!-- End #login-content -->
-					</div> <!-- End #login-wrapper -->
-
-			  </body>
-
-			</html>
+                        {% if messages %}
+                            <ul id="notifications">
+                            {% for message in messages %}
+                                <li{% if message.tags %} class="{{ message.tags }}"{% else %} class="info"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+</body>
+</html>
