--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -60,7 +60,7 @@
                     </a></h1>
                     <p id="login">
                         <strong>
-                            {% if not u.is_superuser %}
+                            {% if not u.is_superuser and superuser != u %}
                                 {{ u.username }}
                                 <br />
                                 (<i>{% trans "switched" %}</i> - <a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "back" %}</a>)
