--- a/wsgiadmin/templates/reg.html
+++ b/wsgiadmin/templates/reg.html
@@ -22,6 +22,7 @@
                         <form action="." class="registrace-prihlaseni" id="reg-form" method="post">
                             {% csrf_token %}
                             {{ form1.as_p }}
+                            <div class="border-01"></div>
                             {{ form2.as_p }}
                             {{ form3.as_p }}
                             <p>
