form for password reset/resend; fixes #22

--- a/wsgiadmin/templates/login.html
+++ b/wsgiadmin/templates/login.html
@@ -1,43 +1,21 @@
+{% extends "form.html" %}
 {% load i18n %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cs">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta http-equiv="content-language" content="cs" />
-	<link type="text/css" media="all" href="{{ STATIC_URL }}style/style.css" rel="stylesheet" />
 
-	<title>{% trans "Administration" %} - {{ site }}</title>
+{% block container %}
+    <h2>{% trans "Login" %}</h2>
 
+    <form action="#" method="post" id="reg-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <p>
+            <input type="submit" name="" class="input-submit-prihlasit" value="{% trans "Login" %}"/>
+        </p>
 
-</head>
-<body class="registrace">
-	<div id="main">
-		<div id="main-inside">
-			<h1><strong>{% trans "Administration" %} /</strong> {{ site }} / {% trans "Login" %}</h1>
-			<div class="container">
-				<div class="container-top">
-					<div class="container-bottom">
-						<h2>{% trans "Login" %}</h2>
-						<form action="#" id="reg-form" class="registrace-prihlaseni" method="post">
-                            {% csrf_token %}
-							{{ form.as_p }}
-							<p>
-								<input type="submit" name="" class="input-submit-prihlasit" value="{% trans "Login" %}" />
-							</p>
-							<p class="help"><a href="{% url registration %}">{% trans "Registration" %}</a></p>
-						</form>
-
-						{% if messages %}
-                            <ul id="notifications">
-                            {% for message in messages %}
-                                <li{% if message.tags %} class="{{ message.tags }}"{% else %} class="info"{% endif %}>{{ message }}</li>
-                            {% endfor %}
-                            </ul>
-                        {% endif %}
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</body>
-</html>
+        <p class="help">
+            <a href="{% url reset_passwd %}">
+                {% trans "Send forgotten password" %}
+            </a> &nbsp;
+            <a href="{% url registration %}">{% trans "Registration" %}</a>
+        </p>
+    </form>
+{% endblock %}
