--- a/wsgiadmin/templates/domains.html
+++ b/wsgiadmin/templates/domains.html
@@ -33,7 +33,7 @@
                     <td>{{ domain.name }}</td>
                     <td id="domain_{{ domain.id }}">
                         <a href="#" title="{% trans "Delete" %}" rel="{{ domain.id }}" class="object_delete">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}"/>
+                            <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
                         </a>
                     </td>
                 </tr>
