--- a/wsgiadmin/templates/ftps.html
+++ b/wsgiadmin/templates/ftps.html
@@ -25,13 +25,13 @@
                     <td>{{ ftp.dir }}</td>
                     <td id="ftp_{{ ftp.id }}">
                         <a href="{% url ftp_passwd ftp.id %}" title="{% trans "Change password" %}">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Change password" %}"/>
+                            <img src="{{ STATIC_URL }}images/ico-heslo.png" alt="{% trans "Change password" %}"/>
                         </a>
                         <a href="{% url ftp_upsert ftp.id %}" title="{% trans "Edit" %}">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Edit" %}"/>
+                            <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
                         </a>
                         <a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ ftp.id }}">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}"/>
+                            <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
                         </a>
 
                     </td>
