--- a/wsgiadmin/templates/redirects.html
+++ b/wsgiadmin/templates/redirects.html
@@ -31,11 +31,11 @@
                     <td>{{ redirect.email }}</td>
                     <td>
                         <a href="{% url wsgiadmin.emails.views.changeRedirect redirect.id %}">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Edit" %}"/>
+                            <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
                         </a>
 
                         <a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ redirect.id }}">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}"/>
+                            <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
                         </a>
                         <span id="removed_{{ redirect.id }}" class="info"></span>
                     </td>
