--- a/wsgiadmin/templates/users.html
+++ b/wsgiadmin/templates/users.html
@@ -52,10 +52,10 @@
 						<td>{{ user.parms.count_pgs }}×/{{ user.parms.count_mys }}×</td>
 						<td>{{ user.parms.home_size }}</td>
 						<td id="user_{{ user.id }}">
-							<a href="{% url wsgiadmin.users.views.switch_to_user user.id num_page %}">Přepnout</a>
-							<a href="{% url wsgiadmin.users.views.install user.id %}" title="Upravit">Nainstalovat</a>
-							<a href="{% url wsgiadmin.users.views.update user.id %}" title="Upravit"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="Upravit" /></a>
-							<a href="#" title="Smazat" onclick="if(confirm('Opravdu chcete smazat uživatele {{ user.id }}?')) remove('{{ user.id }}')"><img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="Smazat" /></a>
+							<a href="{% url wsgiadmin.users.views.switch_to_user user.id num_page %}">{% trans "Switch" %}</a>
+							<a href="{% url wsgiadmin.users.views.install user.id %}" title="{% trans "Install" %}">{% trans "Install" %}</a>
+							<a href="{% url wsgiadmin.users.views.update user.id %}" title="{% trans "Edit" %}"><img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}" /></a>
+							<a href="#" title="{% trans "Delete" %}" onclick="if(confirm('{% trans "Are you sure?" %}')) remove('{{ user.id }}')"><img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}" /></a>
 						</td>
 					</tr>
 					{% endfor %}
