--- a/wsgiadmin/templates/apache.html
+++ b/wsgiadmin/templates/apache.html
@@ -31,24 +31,26 @@
                     <td>{% trans site.type %}</td>
                     <td>{{ site.server_name }}</td>
                     <td class="list_actions">
+                        <ul class="akce">
                         {% if site.type == "php" or site.type == "static" %}
-                            <a href="{% url app_static app_type=site.type app_id=site.id %}">
+                            <li><a href="{% url app_static app_type=site.type app_id=site.id %}">
                                 <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
-                            </a>
+                            </a></li>
                         {% endif %}
                         {% if site.type == "uwsgi" or site.type == "modwsgi" %}
                             {% if site.type == "uwsgi" %}
-                                <a href="{% url wsgiadmin.apacheconf.views.restart site.id %}" title="{% trans "Restart" %}">
+                            <li><a href="{% url wsgiadmin.apacheconf.views.restart site.id %}" title="{% trans "Restart" %}">
                                     <img src="{{ STATIC_URL }}images/ico-obnovit.png" alt="{% trans "Restart" %}"/>
-                                </a>
+                                </a></li>
                             {% endif %}
-                            <a href="{% url wsgiadmin.apacheconf.views.app_wsgi site.id %}" title="{% trans "Edit" %}">
+                            <li><a href="{% url wsgiadmin.apacheconf.views.app_wsgi site.id %}" title="{% trans "Edit" %}">
                                 <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
-                            </a>
+                            </a></li>
                         {% endif %}
-                        <a href="#" id="remove_{{ site.id }}" rel="{{ site.id }}" class="bold object_delete" title="{% trans "Delete" %}">
+                        <li><a href="#" id="remove_{{ site.id }}" rel="{{ site.id }}" class="bold object_delete" title="{% trans "Delete" %}">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
-                        </a>
+                        </a></li>
+                        </ul>
                         <span id="removed_{{ site.id }}" class="info"></span>
                     </td>
                 </tr>
