--- a/wsgiadmin/templates/db.html
+++ b/wsgiadmin/templates/db.html
@@ -28,12 +28,14 @@
                 <tr>
                     <td>{{ db }}</td>
                     <td id="db_{{ db }}">
-                        <a href="{% url db_passwd dbtype=dbtype dbname=db.dbname %}" class="db_pwdchange" title="{% trans "Change password" %}">
+                        <ul class="akce">
+                        <li><a href="{% url db_passwd dbtype=dbtype dbname=db.dbname %}" class="db_pwdchange" title="{% trans "Change password" %}">
                             <img src="{{ STATIC_URL }}images/ico-heslo.png" alt="{% trans "Change password" %}"/>
-                        </a>
-                        <a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ db.id }}">
+                        </a></li>
+                        <li><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ db.id }}">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
-                        </a>
+                        </a></li>
+                        </ul>
                     </td>
                 </tr>
             {% endfor %}
