--- a/wsgiadmin/templates/domains.html
+++ b/wsgiadmin/templates/domains.html
@@ -32,9 +32,11 @@
                     <td>{{ domain.pub_date|date:"d.m.Y" }}</td>
                     <td>{{ domain.name }}</td>
                     <td id="domain_{{ domain.id }}">
-                        <a href="#" title="{% trans "Delete" %}" rel="{{ domain.id }}" class="object_delete">
+                        <ul class="akce">
+                        <li><a href="#" title="{% trans "Delete" %}" rel="{{ domain.id }}" class="object_delete">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
-                        </a>
+                        </a></li>
+                        </ul>
                     </td>
                 </tr>
             {% endfor %}
