--- a/wsgiadmin/templates/ftps.html
+++ b/wsgiadmin/templates/ftps.html
@@ -24,6 +24,7 @@
                     <td>{{ ftp.username }}</td>
                     <td>{{ ftp.dir }}</td>
                     <td id="ftp_{{ ftp.id }}">
+                        <ul class="akce">
                         <a href="{% url ftp_passwd ftp.id %}" title="{% trans "Change password" %}">
                             <img src="{{ STATIC_URL }}images/ico-heslo.png" alt="{% trans "Change password" %}"/>
                         </a>
@@ -33,7 +34,7 @@
                         <a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ ftp.id }}">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
                         </a>
-
+                        </ul>
                     </td>
                 </tr>
             {% endfor %}
